--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~     Copyright (C) 2020  Marek Materzok
   ~
@@ -15,13 +16,12 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<resources>
-    <string name="app_name">Wihajster</string>
-    <string name="add_song">Add song</string>
-    <string name="settings">Settings</string>
-    <string name="sort">Sort</string>
-    <string name="sort_by_album_year">Sort by album year</string>
-    <string name="sort_by_album_name">Sort by album name</string>
-    <string name="sort_by_artist">Sort by artist</string>
-    <string name="sort_by_title">Sort by title</string>
-</resources>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context=".SettingsActivity">
+
+</LinearLayout>
