--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <!--
   ~     Copyright (C) 2020  Marek Materzok
   ~
@@ -16,12 +15,17 @@
   ~     along with this program.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".SettingsActivity">
+<resources>
+    <!-- Reply Preference -->
+    <string-array name="beat_entries">
+        <item>On beats</item>
+        <item>On notes</item>
+        <item>Quiet</item>
+    </string-array>
 
-</LinearLayout>
+    <string-array name="beat_values">
+        <item>on_beats</item>
+        <item>on_notes</item>
+        <item>quiet</item>
+    </string-array>
+</resources>
