--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -18,6 +18,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
+    <PreferenceCategory app:title="Display">
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="reversedFretboard"
+            android:title="Reversed fretboard"
+            app:useSimpleSummaryProvider="true"
+            />
+    </PreferenceCategory>
+
     <PreferenceCategory app:title="Sound">
         <ListPreference
             android:defaultValue="on_beats"
