--- a/app/src/main/res/menu/song_list_menu.xml
+++ b/app/src/main/res/menu/song_list_menu.xml
@@ -27,7 +27,7 @@
         android:id="@+id/sort"
         android:title="@string/sort"
         android:icon="@drawable/ic_sort_white_24dp"
-        app:showAsAction="ifRoom">
+        app:showAsAction="always">
         <menu>
             <item
                 android:id="@+id/sortByTitle"
@@ -46,7 +46,12 @@
     <item
         android:id="@+id/settings"
         android:title="@string/settings"
-        app:showAsAction="always"
+        app:showAsAction="ifRoom"
         android:icon="@drawable/ic_settings_white_24dp"
+        />
+    <item
+        android:id="@+id/about"
+        android:title="@string/about"
+        app:showAsAction="ifRoom"
         />
 </menu>
