Added helpful informations and links

--- a/app/src/main/res/layout/activity_song_list.xml
+++ b/app/src/main/res/layout/activity_song_list.xml
@@ -38,4 +38,17 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/song_view_item" />
 
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="@dimen/big_padding"
+        android:gravity="center"
+        android:text="@string/no_songs"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
