Speed percent value

--- a/app/src/main/res/layout/song_paused_ui.xml
+++ b/app/src/main/res/layout/song_paused_ui.xml
@@ -18,6 +18,7 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal">
@@ -55,12 +56,27 @@
         app:icon="@drawable/ic_right_repeat_24"
         app:iconPadding="0dp" />
 
-    <SeekBar
-        android:id="@+id/speedBar"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="fill_horizontal|center_vertical"
-        android:layout_margin="@dimen/big_padding"
-        android:visibility="invisible" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/speedText"
+            style="@style/WhiteText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="@dimen/big_padding"
+            tools:text="100%" />
+
+        <SeekBar
+            android:id="@+id/speedBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="fill_horizontal|center_vertical"
+            android:layout_margin="@dimen/big_padding"
+            android:visibility="invisible" />
+    </LinearLayout>
 
 </LinearLayout>
