fix more special cases + add color

--- a/app/src/main/res/layout/lyrics.xml
+++ b/app/src/main/res/layout/lyrics.xml
@@ -26,9 +26,11 @@
     <TextView
         android:id="@+id/lyricsText"
         style="@style/WhiteText"
-        android:layout_height="wrap_content"
         android:layout_width="match_parent"
-        android:layout_gravity="bottom"
+        android:layout_height="wrap_content"
+        android:layout_gravity="top"
+        android:layout_marginStart="80dip"
+        android:layout_marginTop="16dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
 
 </LinearLayout>
