Add delete confirmation

--- a/app/src/main/res/layout/song_view_item.xml
+++ b/app/src/main/res/layout/song_view_item.xml
@@ -30,10 +30,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+
         <ImageButton
             android:id="@+id/deleteButton"
+            style="@style/Widget.AppCompat.ImageButton"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@android:color/background_light"
             android:contentDescription="@string/delete_button"
             android:src="@android:drawable/ic_menu_delete" />
         <TextView
